--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
